# pastebin

./: .gitlab-ci.yml  .rustfmt.toml  .travis.yml  Cargo.toml  README.md
lib/: Cargo.toml  README.md
lib/src/: error.rs  pastebin.rs  web.rs
src/: cmdargs.rs  error.rs  id.rs  lib.rs  main.rs  mime.rs  mongo_impl.rs  pastebin.rs  read.rs  request.rs  test.rs  web.rs
static/: hljs_worker.js
templates/: base.html.tera  paste.sh.tera  readme.html.tera  show.hbs  show.html.tera  upload.html.tera
