[package]
name = "pastebin"
version = "0.5.2"
authors = ["mexus <gilaldpellaeon@gmail.com>"]
description = "A simple pastebin service"
license = "GPL-3.0"
readme = "README.md"
keywords = ["pastebin"]
repository = "https://github.com/mexus/pastebin"
documentation = "https://docs.rs/pastebin/"

[badges]
maintenance = { status = "experimental" }

[dependencies]
bson = "0.10"
chrono = "0.4"
clap = "2.29"
data-encoding = "2.1"
iron = "0.5"
log = "0.3"
mongo_driver = "0.11.0"
quick-error = "1.2"
reqwest = "0.8"
simplelog = "0.4"
