[package]
name = "pastebin"
version = "0.8.1"
authors = ["mexus <gilaldpellaeon@gmail.com>"]
description = "A simple pastebin service"
license = "GPL-3.0"
readme = "README.md"
keywords = ["pastebin"]
repository = "https://github.com/mexus/pastebin"
documentation = "https://docs.rs/pastebin/"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "mexus/pastebin", branch = "master" }

[dependencies]
bson = "0.11"
chrono = "0.4"
clap = "2.29"
data-encoding = "2.1"
iron = "0.6"
log = "0.4"
mime_guess = "1.8"
mongo_driver = "0.12"
quick-error = "1.2"
reqwest = "0.8"
serde_json = "1.0"
simplelog = "0.4"
tera = "0.10"
tree_magic = "0.2"
