[package]
name = "pastebin"
version = "0.17.9"
authors = ["mexus <gilaldpellaeon@gmail.com>"]
description = "A simple pastebin service"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["pastebin"]
repository = "https://github.com/mexus/pastebin"
documentation = "https://docs.rs/pastebin/"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "mexus/pastebin", branch = "master" }

[dependencies]
base64 = "0.9"
chrono = "0.4"
clap = "2.29"
iron = "0.6"
lazy_static = "1.0"
log = "0.4"
mime_guess = "1.8"
quick-error = "1.2"
rand = "0.5"
serde = "1.0"
serde_json = "1.0"
tera = "0.11"
tree_magic = "0.2"

[dev-dependencies]
bson = "0.11"
reqwest = "0.8"
